--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing= "20">
       <tr>
-        <td><img src="C:\Temp\PassportPhoto\pavithra.png"  width="130" height="150" alt=""></td>
+        <td><img src="pavithra.png"  width="130" height="150" alt=""></td>
         <td><h1>Pavithra Nair</h1>
         <p>I am <em>Pavithra Nair</em>. I am learning <a href><strong>Web development</strong></a>.</p>
         </td>
