Updated the skill listing

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <tr>
         <td><img src="pavithra.png"  width="130" height="150" alt=""></td>
         <td><h1>Pavithra Nair</h1>
-        <p>I am <em>Pavithra Nair</em>. I am learning <a href><strong>Web development</strong></a>.</p>
+        <p>I am <em>Pavithra Nair</em>. I am learning <a href><strong>Web development and App development</strong></a>.</p>
         </td>
       </tr>
     </table>
@@ -32,7 +32,7 @@
             <td>2018</td>
             <td>Gear International</td>
         </tr>
-        
+
         <tr>
             <td>2011</td>
             <td>Greenwood High</td>
