--- a/index.html
+++ b/index.html
@@ -3,64 +3,161 @@
   <head>
     <meta charset="utf-8">
     <title>Pavithra's Personal Site</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/406c053a77.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <table cellspacing= "20">
-      <tr>
-        <td><img src="pavithra.png"  width="130" height="150" alt=""></td>
-        <td><h1>Pavithra Nair</h1>
-        <p>I am <em>Pavithra Nair</em>. I am learning <a href><strong>Web development and App development</strong></a>.</p>
-        </td>
-      </tr>
-    </table>
-    <hr>
+
+    <section id="navbar">
+
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">My CV</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#edu">Education</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#ski">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#ach">Achievements</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#hobbies">Hobbies</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#footer">Contact Me</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="contact-me.html">Learn More</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+    </section>
+
+    <div class="intro">
+        <img src="profile.jpg" alt="">
+        <h1>Pavithra Nair</h1>
+        <p class="wrap">I am Pavithra Nair. I am learning web development and Android app development.</p>
+    </div>
+
+    <div class="education" id="edu">
+    <i class="icon-cream fas fa-graduation-cap fa-4x"></i>
     <h2>Education</h2>
-    <ul>
-      <li>New Horizon Gurukul</li>
-      <li>Greenwood High</li>
-      <li>Gear International</li>
-    </ul>
-    <br>
-    <hr>
-    <h3>School Experience</h3>
     <table cellspacing="10">
         <tr>
-          <th>Year</th>
-          <th>Institution</th>
+          <th><p>Year</p></th>
+          <th><p>Institution</p></th>
         </tr>
         <tr>
-            <td>2018</td>
-            <td>Gear International</td>
+            <td><p>2018</p></td>
+            <td><p>Gear International</p></td>
         </tr>
 
         <tr>
-            <td>2011</td>
-            <td>Greenwood High</td>
+            <td><p>2011</p></td>
+            <td><p>Greenwood High</p></td>
         </tr>
         <tr>
-            <td>2010</td>
-            <td>New Horizon Gurukul</td>
+            <td><p>2010</p></td>
+            <td><p> New Horizon Gurukul</p></td>
         </tr>
+      </table>
+    </div>
 
-    </table>
-    <hr>
-    <h3>Skills</h3>
+    <div class="skills" id="ski">
+    <i class="icon-pink fas fa-star fa-4x"></i>
+    <h2>Skills</h2>
     <table cellspacing="10">
       <tr>
-        <td>Java</td>
+        <td><p>Java</p></td>
         <td>💛💛💛</td>
       </tr>
       <tr>
-        <td>C++</td>
+        <td><p>C++</p></td>
         <td>💛💛💛💛💛</td>
       </tr>
       <tr>
-        <td>Python</td>
+        <td><p>Python</p></td>
         <td>💛💛💛</td>
       </tr>
     </table>
-    <hr>
-    <a href="hobbies.html"><h2>My Hobbies</h2></a>
-    <a href="contact-me.html"><h2>Contact Me</h2></a>
+    </div>
+
+    <div class="achievements" id="ach">
+      <i class="icon-cream fas fa-trophy fa-4x"></i>
+      <h2>Achievements</h2>
+    </div>
+
+    <div id="hobbies">
+      <i class="icon-pink fas fa-play fa-4x"></i>
+      <h2>Hobbies</h2>
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="..." class="d-block w-100" alt="...">
+      <i class="icon-pink fas fa-book-open fa-4x"></i>
+      <div class="carousel-caption d-none d-md-block">
+        <h3>Debating</h3>
+        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+      <i class="icon-pink fas fa-microphone-alt fa-4x"></i>
+      <div class="carousel-caption d-none d-md-block">
+        <h3>Creative Writing</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div>   
+
+    <footer id="footer">
+    <i class="icon-cream fas fa-phone-alt fa-4x"></i>
+    <h2>Contact Me</h2>
+    <i class="social-icon fab fa-twitter"></i>
+    <i class="social-icon fab fa-facebook-f"></i>
+    <i class="social-icon fab fa-instagram"></i>
+    <i class="social-icon fas fa-envelope"></i>
+    <p class="copyright">©Pavithra Nair 2020</p>
+    </footer>
   </body>
 </html>
